@@ -1,5 +1,6 @@
 vNext
 ----------
+- [MINOR] Adding YubiKit remove method back in; bumping YubiKit Versions (#1994)
 - [PATCH] Make changes for jetpack datastore broker support (#1986)
 - [PATCH] Getting rid of account manager strategy in MSAL/OneAuth (#1988)
 - [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
